adds wire-message, forward-message and updated connection/did-exchange protocol
- adds wire message format support
- adds forward message format support
- adds did-exchange message format support
- adds did:peer and did-doc support
- adds support for en-/decrypting messages using routing-/recipientKeys
- adds encryption support for both the new packMessage and old anon/auth-crypt
  (uses anon/auth-crypt currently for backwards compatibility)
- adds pluggable message handlers and transports
- adds services.js to register services
- increases request body limit from 100kb to 200kb to accomodate
  larger payloads produced by pack-/unpackMessage
- expands /connection api endpoint with query and delete capabilities
- renames connection to didexchange-protocol (as per spec)
- updates swagger docs
- updates tests
